[gd_scene load_steps=4 format=3 uid="uid://djrshqlncgwga"]

[ext_resource type="Script" uid="uid://bgdoun5d3eudi" path="res://game/battle/combatant_panel.gd" id="1_mr8hk"]
[ext_resource type="PackedScene" uid="uid://dv3m85tmjgyxa" path="res://game/battle/target_button.tscn" id="2_jmpl3"]

[sub_resource type="LabelSettings" id="LabelSettings_2yhv4"]
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="MascotPanel" type="ColorRect"]
custom_minimum_size = Vector2(144, 128)
color = Color(0.234, 0.39, 0.234, 1)
script = ExtResource("1_mr8hk")

[node name="Label_HP" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -66.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
text = "15/15"
label_settings = SubResource("LabelSettings_2yhv4")

[node name="Label_AP" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -5.0
offset_top = -23.0
offset_right = 67.0
grow_horizontal = 2
grow_vertical = 0
text = "7/7"
label_settings = SubResource("LabelSettings_2yhv4")
horizontal_alignment = 2

[node name="Label_Name" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -51.5
offset_right = 51.5
offset_bottom = 23.0
grow_horizontal = 2
text = "MascotName"
label_settings = SubResource("LabelSettings_2yhv4")
horizontal_alignment = 1

[node name="TargetButton" parent="." instance=ExtResource("2_jmpl3")]
visible = false
layout_mode = 1
